// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A user visiting the Component Testing Page should have a consistent layout if the service has a warning 1`] = `
<mock-render
  __ngContext__={[Function Number]}
>
  <basics-weather-page>
    <h1>
      Weather App Basic examples
    </h1>
    <basics-weather-introduction
      class="block pb-4"
    />
    <div
      class="block relative min-h-100"
    >
      <basics-location
        class="block pb-4"
      />
      <basics-weather-results
        class="block pb-4"
      />
      <basics-error-message
        class="block mb-3"
      />
    </div>
    <basics-weather-explanation
      class="block pb-4"
    />
  </basics-weather-page>
</mock-render>
`;

exports[`A user visiting the Component Testing Page should have a consistent layout if the service has no warning 1`] = `
<mock-render
  __ngContext__={[Function Number]}
>
  <basics-weather-page>
    <h1>
      Weather App Basic examples
    </h1>
    <basics-weather-introduction
      class="block pb-4"
    />
    <div
      class="block relative min-h-100"
    >
      <basics-location
        class="block pb-4"
      />
      <basics-weather-results
        class="block pb-4"
      />
    </div>
    <basics-weather-explanation
      class="block pb-4"
    />
  </basics-weather-page>
</mock-render>
`;

exports[`A user visiting the Component Testing Page should have a consistent layout if the service is loading 1`] = `
<mock-render
  __ngContext__={[Function Number]}
>
  <basics-weather-page>
    <h1>
      Weather App Basic examples
    </h1>
    <basics-weather-introduction
      class="block pb-4"
    />
    <div
      class="block relative min-h-100"
    >
      <basics-loading />
    </div>
    <basics-weather-explanation
      class="block pb-4"
    />
  </basics-weather-page>
</mock-render>
`;
